# media-explorer

./: .gitignore  AUTHORS  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  uncrustify.cfg
applets/: Makefile.am
applets/displayconf/: .gitignore  Makefile.am  displayconf.c  message.c  message.h
applets/networks/: .gitignore  Makefile.am  main.c  mtn-app.c  mtn-app.h  mtn-button-box.c  mtn-button-box.h  mtn-connman-service.c  mtn-connman-service.h  mtn-connman.c  mtn-connman.h  mtn-service-model.c  mtn-service-model.h  mtn-service-tile.c  mtn-service-tile.h  mtn-services-view.c  mtn-services-view.h
applets/rebinder/: .gitignore  Makefile.am  fakekey.c  fakekey.h  mex-rebinder-control.xml  mex-rebinder.c  mex-rebinder.h  mex-rebinder.service.in  rebinder-configure.c  rebinder-debug.c  rebinder-debug.h  rebinder-evdev-keymap.c  rebinder-evdev-manager.c  rebinder-evdev-manager.h  rebinder-main.c  rebinder-utils.c  rebinder.h
applets/webremote/: .gitignore  Makefile.am  README  clutter-keysyms.js  dbus-client.c  dbus-client.h  dbus-interface.c  dbus-interface.h  dbus-service.c  dbus-service.h  index.html  mdns-client.c  mdns.c  mdns.h  mex-webremote.c  mex-webremote.h  mex-webremote.service.in  settings.c  settings.h  ssdp.c  ssdp.h  tracker-client.c  tracker-client.h  tracker-interface.c  webremote.h
data/: Makefile.am  grilo-system.conf  media-explorer.desktop  media-explorer.gresource.xml  mex-displayconf.desktop  mex-lircrc  mex-networks.desktop  mex-rebinder-config.desktop  mex-rebinder.desktop  mex-shutdown.desktop  mex.desktop  org.media-explorer.gschema.xml  style.css
data/appicons/: Makefile.am
data/icons/: index.theme
data/json/: info-bar.json  info-panel-full.json  info-panel-simple.json  media-controls.json  music-player.json  slide-show.json  welcome.json
data/networks/: mex-networks.css
data/rebinder/: back.json  done.json  error-back.json  error-home.json  error-info.json  home.json  info.json  setup.json  style.css  welcome.json
data/shell/: style.css
data/style/: background-loop.mkv  style.css
examples/: .gitignore  Makefile.am  mex-column-test.c  mex-epg-test.c  mex-expander-box-test.c  mex-grid-test.c  mex-grilo-model-test.c  mex-grilo-operation-test.c  mex-info-bar-test.c  mex-info-panel-test.c  mex-media-controls-test.c  mex-tile-test.c  mex-tileout-effect-test.c
mex/: .gitignore  Makefile.am  check-header-c++-ready.sh  check-header-guards.sh  check-mex-h-inclusion.sh  check-no-quote-includes.sh  mex-action-button.c  mex-action-button.h  mex-action-list.c  mex-action-list.h  mex-action-manager.c  mex-action-manager.h  mex-action-provider.c  mex-action-provider.h  mex-aggregate-model.c  mex-aggregate-model.h  mex-applet-manager.c  mex-applet-manager.h  mex-applet-provider.c  mex-applet-provider.h  mex-applet.c  mex-applet.h  mex-application-category.c  mex-application-category.h  mex-application.c  mex-application.h  mex-aspect-frame.c  mex-aspect-frame.h  mex-background-manager.c  mex-background-manager.h  mex-background.c  mex-background.h  mex-channel-manager.c  mex-channel-manager.h  mex-channel-provider.c  mex-channel-provider.h  mex-channel.c  mex-channel.h  mex-clock-bin.c  mex-clock-bin.h  (+199 more)
mex/glib-controller/: .gitignore  Makefile.am  garraycontroller.c  garraycontroller.h  gcontroller.c  gcontroller.h  gcontrollerenumtypes.c.in  gcontrollerenumtypes.h.in  gcontrollermarshal.list  gcontrollerreference.c  gcontrollerreference.h  gcontrollertypes.h  gcontrollerversion.h  ghashcontroller.c  ghashcontroller.h  glib-controller.h  gptrarraycontroller.c  gptrarraycontroller.h
player/: Makefile.am  main.c  mex-media-player.service.in
plugins/: .gitignore  Makefile.am
plugins/applications/: Makefile.am  mex-applications-plugin.c  mex-applications-plugin.h
plugins/apps/: mex-apps-plugin.c  mex-apps-plugin.h
plugins/bg-backdrop/: mex-backdrop.c  mex-backdrop.h  mex-bg-backdrop-plugin.c  mex-bg-backdrop-plugin.h
plugins/bg-dbusvideo/: mex-bg-dbusvideo-plugin.c  mex-bg-dbusvideo-plugin.h  mex-dbus-background-video.c  mex-dbus-background-video.h
plugins/bg-image/: mex-background-image.c  mex-background-image.h  mex-bg-image-plugin.c  mex-bg-image-plugin.h
plugins/bg-video/: mex-background-video.c  mex-background-video.h  mex-bg-video-plugin.c  mex-bg-video-plugin.h
plugins/bliptv/: mex-bliptv-plugin.c  mex-bliptv-plugin.h
plugins/dbus-input/: Makefile.am  mex-dbusinput-plugin.c  mex-dbusinput-plugin.h
plugins/debug/: .gitignore  mex-debug-plugin.c  mex-debug-plugin.h  mex-debug.in  mex-gobject-list.c  mex-gobject-list.h
plugins/directory-search/: mex-directorysearch-plugin.c  mex-directorysearch-plugin.h
plugins/dvb/: mex-dvb-plugin.c  mex-dvb-plugin.h
plugins/gnome-dvb/: Makefile.am  mex-gnome-dvb-plugin.c  mex-gnome-dvb-plugin.h
plugins/justintv/: mex-justintv-plugin.c  mex-justintv-plugin.h
plugins/mpris/: mex-mpris-plugin.c  mex-mpris-plugin.h  mpris-spec.h
plugins/networks/: mex-networks-plugin.c  mex-networks-plugin.h  mtn-app.c  mtn-app.h  mtn-button-box.c  mtn-button-box.h  mtn-connman-service.c  mtn-connman.c  mtn-dialog.c  mtn-dialog.h  mtn-service-model.c  mtn-service-tile.c  mtn-service-tile.h
plugins/optical-disc/: mex-opticaldisc-plugin.c  mex-opticaldisc-plugin.h
plugins/queue/: Makefile.am  mex-queue-plugin.c  mex-queue-plugin.h
plugins/recommended/: Makefile.am  mex-recommended-plugin.c  mex-recommended-plugin.h
plugins/search/: Makefile.am  mex-search-plugin.c  mex-search-plugin.h  style.css
plugins/sub-extract/: mex-sub-extract-plugin.c  mex-sub-extract-plugin.h
plugins/telepathy/: mex-contact.c  mex-contact.h  mex-telepathy-channel.c  mex-telepathy-channel.h  mex-telepathy-plugin.c  mex-telepathy-plugin.h  tpy-client-factory.c  tpy-client-factory.h
shell/: .gitignore  Makefile.am  mex-main.c
tests/: .gitignore  COPYING  Makefile.am  channels-epg.conf  channels-uri.conf  test-channel.c  test-config.c  test-core.c  test-dvb-epg.c  test-dvb-scanner.c  test-dvb.c  test-epg.c  test-keys.c  test-view.c
thumbnailer/: Makefile.am  mex-thumbnailer-internal.c
(+115 files in other folders)
